# DuRAG

./: .gitignore  README.md  arched-forest-409209-854f83e41ed5.json  check_id.py  chia_yu_issue.py  generate_question.py  generated_question.json  new_swr_pipeline_example.py  pdf_names.json  pipeline_eval.py  pyproject.toml  rag_amr.py  rag_swr.py
.ipynb_checkpoints/: pipeline_eval-checkpoint.py  rag_swr-checkpoint.py
app/: __init__.py
app/src/retriever/amr/: amr_retriever.py  amr_write_weaviate.py
app/src/retriever/swr/: swr_retriever.py
app/tests/swr/: test_swr_write_weaviate.py
eval/: README.md  do_eval.py  eval_retrieved500.json  generated_question_500.json  pipeline_eval.py  rag_eval.py
experiments/: eval_experiments.ipynb
src/: __init__.py  generator.py  rds.py  reranker.py
src/.ipynb_checkpoints/: generator-checkpoint.py
src/amr/: amr_retriever.py  amr_write_rds.py
src/eval/: rag_eval.py  retrieval_eval.py
src/eval/.ipynb_checkpoints/: rag_eval-checkpoint.py
src/pipelines/: new_swr_pipeline_example.py  rag_amr.py  rag_fusion.py  rag_pipeline.py  rag_swr.py
src/retriever/: RetrievalObject.py  data_models.py  retriever.py
src/retriever/amr/: amr_retriever.py  amr_write_rds.py  amr_write_weaviate.py
src/retriever/swr/: swr_retriever.py  swr_write_rds.py  swr_write_weaviate.py
src/swr/: sentence_window_map.json  swr_retriever.py  swr_write_rds.py  swr_write_weaviate.py
tests/: test_rds.py
tests/amr/: test_chunking_hierarchy.py
tests/swr/: test_check_id.py  test_swr_write_weaviate.py
