[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DuRAG"
version = "0.1.0"
description = "death to llama-index"
authors = [{ name = "capstoners" }]
dependencies = [
  "python-dotenv",
  "psycopg2",
  "llama-index",
  "weaviate-client",
  "FlagEmbedding",
  "google-generativeai",
  "google-cloud-aiplatform",
]

[tool.ruff]
select = ['E', 'F', "I"]
