[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DuRAG"
version = "0.1.0"
description = "death to llama-index"
authors = [{ name = "capstoners" }]
dependencies = [
  "python-dotenv",
  "psycopg2",
  "llama-index",
  "weaviate-client",
  "FlagEmbedding",
  "google-generativeai",
  "google-cloud-aiplatform",
  "litellm",
  "trulens-eval",
]

[tool.ruff]
select = ['E', 'F', "I"]

[tool.setuptools.package-dir]
DuRAG = "app"

[tool.setuptools.package-data]
DuRAG = ["**/*.json", "**/*.txt"]
