[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DuRAG"
version = "0.2.2"
description = "Custom RAG model for Financial Documents"
authors = [{ name = "capstoners" }]
dependencies = [
  "python-dotenv",
  "psycopg2",
  "llama-index",
  "weaviate-client",
  "FlagEmbedding",
  "google-generativeai",
  "google-cloud-aiplatform",
  "litellm",
  "trulens-eval",
]

[tool.ruff]
select = ['E', 'F', "I"]

[tool.setuptools.package-dir]
DuRAG = "src"

[tool.setuptools.package-data]
DuRAG = ["**/*.json", "**/*.txt"]
